Added folder css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="widht-device-width, initial-scale-1.0" />
     <title>fe core 58</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Секція top line bg -->
