Додала кольори в шапці

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <!-- Секція top line bg -->
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a class="link" href="./index.html">WebStudio</a>
       <nav>
         <!-- Секція Menu nav -->
         <ul>
-          <li><a href="/Студия">Студия</a></li>
+          <li><a class="first-link" href="/Студия">Студия</a></li>
           <li><a href="/Портфолио">Портфолио</a></li>
           <li><a href="/Контакты">Контакты</a></li>
         </ul>
