Додано стилі в шапці

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <body>
     <!-- Секція top line bg -->
     <header>
-      <a class="link" href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
         <ul>
           <li><a class="first-link" href="/Студия">Студия</a></li>
-          <li><a href="/Портфолио">Портфолио</a></li>
-          <li><a href="/Контакты">Контакты</a></li>
+          <li><a class="scnd-link" href="/Портфолио">Портфолио</a></li>
+          <li><a class="thrd-link" href="/Контакты">Контакты</a></li>
         </ul>
       </nav>
       <div>
         <!-- Посилання на адресу електронної пошти -->
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <!-- Посилання на телефонний номер -->
-        <a href="tel:+380961111111">+380961111111</a>
+        <a class="tel-hd" href="tel:+380961111111">+380961111111</a>
       </div>
     </header>
     <main>
       <!-- Секция Шапка -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button class="text-button" type="button">Заказать услугу</button>
       </section>
       <!-- Секция Особенности -->
       <section>
