--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <!-- Секция Шапка -->
-      <section>
+      <section class="bg-hdr" >
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button class="text-button" type="button">Заказать услугу</button>
       </section>
@@ -36,29 +36,29 @@
       <section>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="attention-detail" >Внимание к деталям</h3>
+            <p class="idea-considerations" >
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="punctuality" >Пунктуальность</h3>
+            <p class="task-company" >
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="planning" >Планирование</h3>
+            <p class="consult" >
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="tech" >Современные технологии</h3>
+            <p class="significance-problem" >
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -66,7 +66,7 @@
         </ul>
       </section>
       <!-- Секция Чем мы занимаемся -->
-      <h2>Чем мы занимаемся</h2>
+      <h2 class="what-we-do" >Чем мы занимаемся</h2>
       <ul>
         <li>
           <img
@@ -88,6 +88,7 @@
       </ul>
       <!-- Секция Team -->
       <section>
+        <h2 class="Team" >Наша команда</h2>
         <ul>
           <li>
             <img
@@ -95,8 +96,8 @@
               alt="Портрет Игоря Демьяненко"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="name-ihor" >Игорь Демьяненко</h3>
+            <p class="designer" >Product Designer</p>
           </li>
           <li>
             <img
@@ -104,8 +105,8 @@
               alt="Портрет Ольги Репиной"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-olha" >Ольга Репина</h3>
+            <p class="developer" >Frontend Developer</p>
           </li>
           <li>
             <img
@@ -113,8 +114,8 @@
               alt="Портрет Николая Тарасова"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="name-nick" >Николай Тарасов</h3>
+            <p class="marketing" >Marketing</p>
           </li>
           <li>
             <img
@@ -122,28 +123,28 @@
               alt="Портрет Михаила Ермакова"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="name-michael" >Михаил Ермаков</h3>
+            <p class="ui-Designer" >UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Секция Footer bg-->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <div>
         <address>
           <ul>
             <li>
-              <a
+              <a class="link-adr-ftr"
                 href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+            <li><a class="link-mail-ftr" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link-ph-ftr" href="tel:+380961111111">+380961111111</a></li>
           </ul>
         </address>
       </div>
