Оновлено фон секції Team

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </li>
       </ul>
       <!-- Секция Team -->
-      <section>
+      <section class="sect-team" >
         <h2 class="Team" >Наша команда</h2>
         <ul>
           <li>
