Задано властивості загальні для body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Секція top line bg -->
-    <header>
+    <header class="header-link" >
       <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
