Додала розмітку в portfolio

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="widht-device-width, initial-scale-1.0" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="widht-device-width, initial-scale=1.0">
     <title>fe core 58</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -131,7 +131,7 @@
     </main>
     <!--Секция Footer bg-->
     <footer>
-      <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
+      <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
       <div>
         <address>
           <ul>
