Додала селектори навігації та зображень

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <nav>
         <!-- Секція Menu nav -->
         <ul>
-          <li><a class="first-link" href="/Студия">Студия</a></li>
-          <li><a class="scnd-link" href="/Портфолио">Портфолио</a></li>
-          <li><a class="thrd-link" href="/Контакты">Контакты</a></li>
+          <li><a class="first-nav" href="/Студия">Студия</a></li>
+          <li><a class="scnd-nav" href="/Портфолио">Портфолио</a></li>
+          <li><a class="thrd-nav" href="/Контакты">Контакты</a></li>
         </ul>
       </nav>
-      <div>
+      <div class="cont-nav">
         <!-- Посилання на адресу електронної пошти -->
         <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <!-- Посилання на телефонний номер -->
@@ -69,29 +69,30 @@
       <h2 class="what-we-do" >Чем мы занимаемся</h2>
       <ul>
         <li>
-          <img
+          <img class="pict-first"
             src="images/box1.jpg"
             alt="Программирование за планшетом"
             width="370"
           />
         </li>
         <li>
-          <img
+          <img class="pict-scnd"
             src="images/box2.jpg"
             alt="Разработка мобильного приложения"
             width="370"
           />
         </li>
         <li>
-          <img src="images/box3.jpg" alt="Рисование на планшете" width="370" />
+          <img class="pict-thrd"
+           src="images/box3.jpg" alt="Рисование на планшете" width="370" />
         </li>
       </ul>
       <!-- Секция Team -->
       <section class="sect-team" >
-        <h2 class="Team" >Наша команда</h2>
+        <h2 class="team" >Наша команда</h2>
         <ul>
           <li>
-            <img
+            <img class="employee-first"
               src="images/box4.jpg"
               alt="Портрет Игоря Демьяненко"
               width="270"
@@ -100,7 +101,7 @@
             <p class="designer" >Product Designer</p>
           </li>
           <li>
-            <img
+            <img class="employee-scnd"
               src="images/box5.jpg"
               alt="Портрет Ольги Репиной"
               width="270"
@@ -109,7 +110,7 @@
             <p class="developer" >Frontend Developer</p>
           </li>
           <li>
-            <img
+            <img class="employee-thrd"
               src="images/box6.jpg"
               alt="Портрет Николая Тарасова"
               width="270"
@@ -118,7 +119,7 @@
             <p class="marketing" >Marketing</p>
           </li>
           <li>
-            <img
+            <img class="employee-fourth"
               src="images/box7.jpg"
               alt="Портрет Михаила Ермакова"
               width="270"
@@ -130,10 +131,10 @@
       </section>
     </main>
     <!--Секция Footer bg-->
-    <footer>
+    <footer class="footer-back">
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
-      <div>
-        <address>
+      <div class="contact">
+        <address class="cont-nav">
           <ul>
             <li>
               <a class="link-adr-ftr"
