Виконала розмітку сторінки portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <!-- Секція top line bg -->
@@ -18,7 +19,7 @@
             <li><a class="thrd-link" href="/Контакты">Контакты</a></li>
           </ul>
         </nav>
-        <div>
+        <div class="cont-nav">
           <!-- Посилання на адресу електронної пошти -->
           <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
           <!-- Посилання на телефонний номер -->
@@ -26,16 +27,67 @@
         </div>
       </header>
       <main>
-          <ul>
+          <!-- <h1>Фильтр портфолио</h1> -->
+          <div>
+            <ul>
               <li><button type="button">Все</button></li>
               <li><button type="button">Веб-сайты</button></li>
               <li><button type="button">Приложения</button></li>
               <li><button type="button">Дизайн</button></li>
               <li><button type="button">Маркетинг</button></li>
           </ul>
-          <ul>
-              
+        </div> 
+        <div>
+        <ul>
+            <li> <img src="./images/portfolio-images/img-1.jpg" alt="Ноутбук" width="370">
+                <h2>Технокряк</h2><p>Веб-сайт</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-2.jpg" alt="Ноутбук" width="370">
+                <h2>Постер New Orlean vs Golden Star</h2><p>Дизайн</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-3.jpg" alt="Ноутбук" width="370">
+                <h2>Ресторан Seafood</h2><p>Приложение</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-4.jpg" alt="Ноутбук" width="370">
+                <h2>Проект Prime</h2><p>Маркетинг</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-5.jpg" alt="Ноутбук" width="370">
+                <h2>Проект Boxes</h2><p>Приложение</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-6.jpg" alt="Ноутбук" width="370">
+                <h2>Inspiration has no Borders</h2><p>Веб-сайт</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-7.jpg" alt="Ноутбук" width="370">
+                <h2>Издание Limited Edition</h2><p>Дизайн</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-8.jpg" alt="Ноутбук" width="370">
+                <h2>Проект LAB</h2><p>Маркетинг</p>
+              </li>
+            <li> <img src="./images/portfolio-images/img-9.jpg" alt="Ноутбук" width="370">
+                <h2>Growing Business</h2><p>Приложение</p>
+              </li>
           </ul>
+        </div>  
       </main>
+      <!--Секция Footer bg-->
+    <footer class="footer-back">
+      <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
+      <div class="contact">
+        <address class="cont-nav">
+          <ul>
+            <li>
+              <a class="link-adr-ftr"
+                href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li><a class="link-mail-ftr" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link-ph-ftr" href="tel:+380961111111">+380961111111</a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
 </body>
 </html>
