Додала класи, що забрали підкреслення

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
-        <ul>
+        <ul class="menu-nav">
           <li><a class="first-nav" href="/Студия">Студия</a></li>
           <li><a class="scnd-nav" href="/Портфолио">Портфолио</a></li>
           <li><a class="thrd-nav" href="/Контакты">Контакты</a></li>
         </ul>
       </nav>
-      <div class="cont-nav">
+      <div class="contact-nav">
         <!-- Посилання на адресу електронної пошти -->
         <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <!-- Посилання на телефонний номер -->
@@ -133,7 +133,7 @@
     <!--Секция Footer bg-->
     <footer class="footer-back">
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
-      <div class="contact">
+      <div>
         <address class="cont-nav">
           <ul>
             <li>
