--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="widht-device-width, initial-scale=1.0">
     <title>fe core 58</title>
+    <!-- Шрифти -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <!-- Кастомні стилі -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
