Видалила декорації, маркери з списків

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
-        <ul class="menu-nav">
-          <li><a class="first-nav" href="/Студия">Студия</a></li>
-          <li><a class="scnd-nav" href="/Портфолио">Портфолио</a></li>
-          <li><a class="thrd-nav" href="/Контакты">Контакты</a></li>
+        <ul class="menu-nav list">
+          <li><a class="first-nav link" href="/Студия">Студия</a></li>
+          <li><a class="scnd-nav link" href="/Портфолио">Портфолио</a></li>
+          <li><a class="thrd-nav link" href="/Контакты">Контакты</a></li>
         </ul>
       </nav>
       <div class="contact-nav">
@@ -39,7 +39,7 @@
       </section>
       <!-- Секция Особенности -->
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="attention-detail" >Внимание к деталям</h3>
             <p class="idea-considerations" >
@@ -72,7 +72,7 @@
       </section>
       <!-- Секция Чем мы занимаемся -->
       <h2 class="what-we-do" >Чем мы занимаемся</h2>
-      <ul>
+      <ul class="list">
         <li>
           <img class="pict-first"
             src="images/box1.jpg"
@@ -95,7 +95,7 @@
       <!-- Секция Team -->
       <section class="sect-team" >
         <h2 class="team" >Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img class="employee-first"
               src="images/box4.jpg"
@@ -140,7 +140,7 @@
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
       <div>
         <address class="cont-nav">
-          <ul>
+          <ul class="list">
             <li>
               <a class="link-adr-ftr"
                 href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
