Додала класи кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
         <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
         <nav>
           <!-- Секція Menu nav -->
-          <ul>
-            <li><a class="first-link" href="/Студия">Студия</a></li>
-            <li><a class="scnd-link" href="/Портфолио">Портфолио</a></li>
-            <li><a class="thrd-link" href="/Контакты">Контакты</a></li>
+          <ul class="menu-nav-list">
+            <li><a class="first-nav-port" href="/Студия">Студия</a></li>
+            <li><a class="scnd-nav-port" href="/Портфолио">Портфолио</a></li>
+            <li><a class="thrd-nav-port" href="/Контакты">Контакты</a></li>
           </ul>
         </nav>
-        <div class="cont-nav">
+        <div class="contact-nav">
           <!-- Посилання на адресу електронної пошти -->
           <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
           <!-- Посилання на телефонний номер -->
@@ -34,12 +34,12 @@
       <main>
           <!-- <h1>Фильтр портфолио</h1> -->
           <div>
-            <ul>
-              <li><button type="button">Все</button></li>
-              <li><button type="button">Веб-сайты</button></li>
-              <li><button type="button">Приложения</button></li>
-              <li><button type="button">Дизайн</button></li>
-              <li><button type="button">Маркетинг</button></li>
+            <ul class="button-all">
+              <li><button class="button-all-main" type="button">Все</button></li>
+              <li><button class="button-all-sites" type="button">Веб-сайты</button></li>
+              <li><button class="button-all-apps" type="button">Приложения</button></li>
+              <li><button class="button-all-design" type="button">Дизайн</button></li>
+              <li><button class="button-all-marketing" type="button">Маркетинг</button></li>
           </ul>
         </div> 
         <div>
