--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
-        <ul class="menu-nav list">
+        <ul class="menu-nav-list">
           <li><a class="first-nav link" href="/Студия">Студия</a></li>
           <li><a class="scnd-nav link" href="/Портфолио">Портфолио</a></li>
           <li><a class="thrd-nav link" href="/Контакты">Контакты</a></li>
@@ -139,7 +139,7 @@
     <footer class="footer-back">
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
       <div>
-        <address class="cont-nav">
+        <address class="contact-nav">
           <ul class="list">
             <li>
               <a class="link-adr-ftr"
