Видалила маркери в списках

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
       <nav>
         <!-- Секція Menu nav -->
-        <ul class="menu-nav-list">
+        <ul class="menu-nav-list list">
           <li><a class="first-nav link" href="/Студия">Студия</a></li>
           <li><a class="scnd-nav link" href="/Портфолио">Портфолио</a></li>
           <li><a class="thrd-nav link" href="/Контакты">Контакты</a></li>
