--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <a class="logo" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio">Studio</span></a>
         <nav>
           <!-- Секція Menu nav -->
-          <ul class="menu-nav-list">
+          <ul class="menu-nav-list list">
             <li><a class="first-nav-port" href="/Студия">Студия</a></li>
             <li><a class="scnd-nav-port" href="/Портфолио">Портфолио</a></li>
             <li><a class="thrd-nav-port" href="/Контакты">Контакты</a></li>
@@ -34,7 +34,7 @@
       <main>
           <!-- <h1>Фильтр портфолио</h1> -->
           <div>
-            <ul class="button-all">
+            <ul class="button-all list">
               <li><button class="button-all-main" type="button">Все</button></li>
               <li><button class="button-all-sites" type="button">Веб-сайты</button></li>
               <li><button class="button-all-apps" type="button">Приложения</button></li>
@@ -43,7 +43,7 @@
           </ul>
         </div> 
         <div>
-        <ul>
+        <ul class="list">
             <li> <img src="./images/portfolio-images/img-1.jpg" alt="Ноутбук" width="370">
                 <h2>Технокряк</h2><p>Веб-сайт</p>
               </li>
@@ -79,7 +79,7 @@
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
       <div class="contact">
         <address class="cont-nav">
-          <ul>
+          <ul class="list">
             <li>
               <a class="link-adr-ftr"
                 href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
