Додала посилання між сторінками

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <nav>
           <!-- Секція Menu nav -->
           <ul class="menu-nav-list list">
-            <li><a class="first-nav-port" href="/Студия">Студия</a></li>
+            <li><a class="first-nav-port" href="./index.html" aria-label="Посилання на студию">Студия</a></li>
             <li><a class="scnd-nav-port" href="/Портфолио">Портфолио</a></li>
             <li><a class="thrd-nav-port" href="/Контакты">Контакты</a></li>
           </ul>
