Додала колір вибраної сторінки

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <!-- Секція Menu nav -->
         <ul class="menu-nav-list list">
-          <li><a class="first-nav link" href="/Студия">Студия</a></li>
+          <li><a class="first-nav link current-link" href="/Студия">Студия</a></li>
           <li><a class="scnd-nav link" href="./portfolio.html" aria-label="Посилання на Портфолио">Портфолио</a></li>
           <li><a class="thrd-nav link" href="/Контакты">Контакты</a></li>
         </ul>
