--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
           <!-- Секція Menu nav -->
           <ul class="menu-nav-list list">
             <li><a class="first-nav-port" href="./index.html" aria-label="Посилання на студию">Студия</a></li>
-            <li><a class="scnd-nav-port" href="/Портфолио">Портфолио</a></li>
+            <li><a class="scnd-nav-port current-link" href="/Портфолио">Портфолио</a></li>
             <li><a class="thrd-nav-port" href="/Контакты">Контакты</a></li>
           </ul>
         </nav>
