Додала зміну кольору мейлу при футері

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
     <footer class="footer-back">
       <a class="logo-footer" href="./index.html" aria-label="Посилання на студію" lang="en-us">Web<span class="studio-white">Studio</span></a>
       <div class="contact">
-        <address class="cont-nav">
+        <address class="contact-nav">
           <ul class="list">
             <li>
               <a class="link-adr-ftr"
