--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <nav>
         <!-- Секція Menu nav -->
         <ul class="menu-nav-list list">
-          <li><a class="first-nav link current-link" href="/Студия">Студия</a></li>
+          <li><a class="first-nav link current-link" href="./index.html" aria-label="Посилання на студию">Студия</a></li>
           <li><a class="scnd-nav link" href="./portfolio.html" aria-label="Посилання на Портфолио">Портфолио</a></li>
           <li><a class="thrd-nav link" href="/Контакты">Контакты</a></li>
         </ul>
       </nav>
       <div class="contact-nav">
         <!-- Посилання на адресу електронної пошти -->
-        <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link-mail mail-main" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <!-- Посилання на телефонний номер -->
         <a class="tel-hd" href="tel:+380961111111">+380961111111</a>
       </div>
