Стилізовано кнопки та текст

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,47 +32,45 @@
         </div>
       </header>
       <main>
+        <section>
           <!-- <h1>Фильтр портфолио</h1> -->
-          <div>
-            <ul class="button-all list">
-              <li><button class="button-all-main" type="button">Все</button></li>
-              <li><button class="button-all-sites" type="button">Веб-сайты</button></li>
-              <li><button class="button-all-apps" type="button">Приложения</button></li>
-              <li><button class="button-all-design" type="button">Дизайн</button></li>
-              <li><button class="button-all-marketing" type="button">Маркетинг</button></li>
+            <ul class="button-list">
+              <li><button class="button-text" type="button">Все</button></li>
+              <li><button class="button-text" type="button">Веб-сайты</button></li>
+              <li><button class="button-text" type="button">Приложения</button></li>
+              <li><button class="button-text" type="button">Дизайн</button></li>
+              <li><button class="button-text" type="button">Маркетинг</button></li>
           </ul>
-        </div> 
-        <div>
-        <ul class="list">
+        <ul class="all-services">
             <li> <img src="./images/portfolio-images/img-1.jpg" alt="Ноутбук" width="370">
-                <h2>Технокряк</h2><p>Веб-сайт</p>
+                <h2 class="name-service">Технокряк</h2><p class="type-service">Веб-сайт</p>
               </li>
             <li> <img src="./images/portfolio-images/img-2.jpg" alt="Ноутбук" width="370">
-                <h2>Постер New Orlean vs Golden Star</h2><p>Дизайн</p>
+                <h2 class="name-service">Постер New Orlean vs Golden Star</h2><p class="type-service">Дизайн</p>
               </li>
             <li> <img src="./images/portfolio-images/img-3.jpg" alt="Ноутбук" width="370">
-                <h2>Ресторан Seafood</h2><p>Приложение</p>
+                <h2 class="name-service">Ресторан Seafood</h2><p class="type-service">Приложение</p>
               </li>
             <li> <img src="./images/portfolio-images/img-4.jpg" alt="Ноутбук" width="370">
-                <h2>Проект Prime</h2><p>Маркетинг</p>
+                <h2 class="name-service">Проект Prime</h2><p class="type-service">Маркетинг</p>
               </li>
             <li> <img src="./images/portfolio-images/img-5.jpg" alt="Ноутбук" width="370">
-                <h2>Проект Boxes</h2><p>Приложение</p>
+                <h2 class="name-service">Проект Boxes</h2><p class="type-service">Приложение</p>
               </li>
             <li> <img src="./images/portfolio-images/img-6.jpg" alt="Ноутбук" width="370">
-                <h2>Inspiration has no Borders</h2><p>Веб-сайт</p>
+                <h2 class="name-service">Inspiration has no Borders</h2><p class="type-service">Веб-сайт</p>
               </li>
             <li> <img src="./images/portfolio-images/img-7.jpg" alt="Ноутбук" width="370">
-                <h2>Издание Limited Edition</h2><p>Дизайн</p>
+                <h2 class="name-service">Издание Limited Edition</h2><p class="type-service">Дизайн</p>
               </li>
             <li> <img src="./images/portfolio-images/img-8.jpg" alt="Ноутбук" width="370">
-                <h2>Проект LAB</h2><p>Маркетинг</p>
+                <h2 class="name-service">Проект LAB</h2><p class="type-service">Маркетинг</p>
               </li>
             <li> <img src="./images/portfolio-images/img-9.jpg" alt="Ноутбук" width="370">
-                <h2>Growing Business</h2><p>Приложение</p>
+                <h2 class="name-service">Growing Business</h2><p class="type-service">Приложение</p>
               </li>
           </ul>
-        </div>  
+        </section>   
       </main>
       <!--Секция Footer bg-->
     <footer class="footer-back">
